src/test/deca/syntax/valid/created/testOpArith/minus.deca
// Description :
//    Test de l'opération de soustraction
//
// Résultats :
//    ok


{
    int sub = 1 - 2;
}


